adds configmap ref

--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -17,3 +17,7 @@ spec:
       containers:
         - name: udagram-api-user
           image: nchandlersmith/udagram-api-user
+          imagePullPolicy: Always
+          envFrom:
+            - configMapRef:
+                name: udagram-api
