--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ services:
 script:
   - docker --version
   - docker build -t udagram-api-user .
-  - docker tag udagram-api-user nchandlersmith/udagram-api-user
+  - docker tag udagram-api-user nchandlersmith/udagram-api-user:v2
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push nchandlersmith/udagram-api-user
+  - docker push nchandlersmith/udagram-api-user:v2
