--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,26 @@ services:
   - docker
 script:
   - docker --version
-  - docker build -t udagram-api-user .
-  - docker tag udagram-api-user nchandlersmith/udagram-api-user:2
+  # Define variables for image name building
+  - export DOCKER_REPO=nchandlersmith
+  - export IMAGE_NAME=udagram-api-user
+  - export TIMESTAMP=date +%Y-%m-%d-%H-%M-%S
+  - export VERSION=`${TIMESTAMP}-${TRAVIS_COMIT}`
+
+  # Build latest image name
+  - export LATEST_IMAGE=`$DOCKER_REPO\$IMAGE_NAME:latest`
+  # Build versioned image name
+  - export VERSIONED_IMAGE=`$DOCKER_REPO\$IMAGE_NAME:VERSION`
+
+  # Build image
+  - docker build -t $IMAGE_NAME .
+  # Tag latest
+  - docker tag $IMAGE_NAME $LATEST_IMAGE
+  # Tag version
+  - docker tag $IMAGE_NAME $VERSIONED_IMAGE
+
+  # Login to Docker Hub
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push nchandlersmith/udagram-api-user:2
+  # Push all the things
+  - docker push $LATEST_IMAGE
+  - docker push $VERSIONED_IMAGE
