--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,23 @@ script:
   - docker --version
   # Define variables for image name building
   - export DOCKER_REPO=nchandlersmith
+  - echo $DOCKER_REPO
   - export IMAGE_NAME=udagram-api-user
+  - echo $IMAGE_NAME
   - export TIMESTAMP=date
+  - echo $TIMESTAMP
   - export VERSION=`${TIMESTAMP}-${TRAVIS_COMIT}`
+  - echo $VERSION
 
   # Build latest image name
   - export LATEST_IMAGE=`$DOCKER_REPO\$IMAGE_NAME:latest`
+  - echo $LATEST_IMAGE
   # Build versioned image name
   - export VERSIONED_IMAGE=`$DOCKER_REPO\$IMAGE_NAME:VERSION`
+  - echo $VERSIONED_IMAGE
 
   # Build image
-  - docker build -t $IMAGE_NAME .
+  - docker build -t $IMAGE_NAME
   # Tag latest
   - docker tag $IMAGE_NAME $LATEST_IMAGE
   # Tag version
