--- a/.travis.yml
+++ b/.travis.yml
@@ -16,21 +16,21 @@ script:
   - echo $VERSION
 
   # Build latest image name
-  - export LATEST_IMAGE=${DOCKER_REPO}\${IMAGE_NAME}:latest
+  - export LATEST_IMAGE="$DOCKER_REPO"\"$IMAGE_NAME":latest
   - echo $LATEST_IMAGE
   # Build versioned image name
-  - export VERSIONED_IMAGE=${DOCKER_REPO}\${IMAGE_NAME}:${VERSION}
+  - export VERSIONED_IMAGE="$DOCKER_REPO"\"$IMAGE_NAME":"$VERSION"
   - echo $VERSIONED_IMAGE
 
   # Build image
-  - docker build -t ${IMAGE_NAME}
+  - docker build -t "$IMAGE_NAME"
   # Tag latest
-  - docker tag ${IMAGE_NAME} ${LATEST_IMAGE}
+  - docker tag "$IMAGE_NAME" "$LATEST_IMAGE"
   # Tag version
-  - docker tag ${IMAGE_NAME} ${VERSIONED_IMAGE}
+  - docker tag "$IMAGE_NAME" "$VERSIONED_IMAGE"
 
   # Login to Docker Hub
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   # Push all the things
-  - docker push ${LATEST_IMAGE}
-  - docker push ${VERSIONED_IMAGE}
+  - docker push "$LATEST_IMAGE"
+  - docker push "$VERSIONED_IMAGE"
