--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - echo $VERSION
 
   # Build latest image name
-  - export LATEST_IMAGE=$DOCKER_REPO\$IMAGE_NAME:latest
+  - export LATEST_IMAGE={$DOCKER_REPO}\{$IMAGE_NAME}:latest
   - echo $LATEST_IMAGE
   # Build versioned image name
   - export VERSIONED_IMAGE=$DOCKER_REPO\$IMAGE_NAME:$VERSION
