updates image name

--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: udagram-api-user
-          image: nchandlersmith/udagram-api-user
+          image: nchandlersmith/udagram-api-user:latest
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
