updates container name; port is now targetPort

--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -15,7 +15,7 @@ spec:
         app: backend_user
     spec:
       containers:
-        - name: udagram-api-user
+        - name: userapi
           image: nchandlersmith/udagram-api-user:latest
           imagePullPolicy: Always
           envFrom:
