--- a/deploy/service.yml
+++ b/deploy/service.yml
@@ -6,6 +6,7 @@ metadata:
     run: backend_user
 spec:
   ports:
-    - targetPort: 8080
+    - port: 8080
+      targetPort: 8080
   selector:
-    run: backend_user
+    run: udagram
